2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/ViActions.cs: Implemented { and }.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/DeleteActions.cs: Implemented 'dd' and 'd{motion}' for
	simple motions.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs: Refactor the dictionaries into switches to
	reduce overhead (also more readable for character commands). Split
	cursor and character navigation keys so that cursor keys can work in
	insert mode.

	* Mono.TextEditor/SelectionActions.cs: Add method for converting a
	movement action to a selection action.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs: Add support for simple vi commands.

2008-10-10  Christian Hergert  <chris@dronelabs.com>

	* SyntaxModes/PythonSyntaxMode.xml: Python does not support multiline
	comments.
	* SyntaxModes/CSyntaxMode.xml: Add NULL as a literal keyword.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/CaretMoveActions.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: fixed 'Bug 434165 - Page UP/Down
	Key on top/bottom of a code folded make the region Unfolded'.

2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: fixed 'Bug 432845 - Find and
	  replace doesn't work'.

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor.mdp, Makefile.am: Updated.
	* Mono.TextEditor/BookmarkActions.cs,
	  Mono.TextEditor/CaretMoveActions.cs,
	  Mono.TextEditor/ClipboardActions.cs,
	  Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/DeleteActions.cs, Mono.TextEditor/EditAction.cs,
	  Mono.TextEditor/EditMode.cs, Mono.TextEditor/SelectionActions.cs,
	  Mono.TextEditor/SimpleEditMode.cs, Mono.TextEditor/TextEditor.cs,